# pebbles

./: .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  Dockerfile  LICENSE  README.md  README.rst  Vagrantfile  db_create.py  devel_dataset.yaml  howto_launch_on_pouta.md  manage.py  requirements.in  requirements.txt  setup.cfg  setup.py  tmux.conf
ansible/: notebook_gpu_playbook.yml  notebook_playbook.yml  playbook.yml  prepare_vm.yml
ansible/group_vars/: all
ansible/host_vars/: single
conf/: tmuxifier_full_status.yml  tmuxinator_status.yml
deployment/: Dockerfile  building.md  building_with_s2i.md  docker-compose.yaml  gunicorn-debug.cfg  local.env  local_config.yaml  pebbles-s2i.Dockerfile  pebbles-template.yml  pebbles.Dockerfile  run_celery.bash  run_gunicorn.bash
doc/: Makefile  concepts.md  database_migrations.md  dev_environment.md  how_to_install_on_cpouta.md
migrations/: alembic.ini  env.py
pebbles/: __init__.py  app.py  client.py  config.py  custom_handlers.py  forms.py  logger.py  models.py  rules.py  server.py  utils.py
pouta_blueprints/: __init__.py  app.py  client.py  config.py  forms.py  logger.py  models.py  rules.py  server.py  tasks.py  utils.py  views.py
protractor/: blueprints-spec.js  conf.js
resource_cloud/: app.py  config.py  forms.py  models.py  server.py  tasks.py  utils.py  views.py  wsgi.py
scripts/: cloud-init-bootstrap.bash  cloud-user-bootstrap.bash  deploy_local_docker_containers.bash  export_database.bash  initialize_blueprints.py  install_pb.bash  install_standalone_notebook.bash  oc_rsync_source.bash  post_install.py  restore_database.bash  tmux_status.bash  update_m2m.py
tests/: conftest.py  test_flask.py  test_kubernetes_driver.py  test_maintenance.py  test_misc.py  test_models.py
(+550 files in other folders)
