[metadata]
name = pouta-blueprints
author = Harri Hämäläinen
author-email = harri.hamalainen@csc.fi
summary = Interfaces to manage cloud resource access
license = MIT
version = 1.2
description-file =
    README.md
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    pouta_blueprints
