[metadata]
name = pouta-blueprints
author = Harri Hämäläinen
author-email = harri.hamalainen@csc.fi
summary = Interfaces to manage cloud resource access
license = MIT
version = 1.2
description-file =
    README.md
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    pouta_blueprints

[flake8]
# E501: line too long (82 characters)
# E402: module level import not at top of file
# * why do we have this?
ignore = E501,E402
